# trendvisdata

./: README.md  setup.cfg
trendvisdata/: __init__.py  chart_data.py  chart_prep.py  market_data.py  sector_mappings.py  trend.py  trend_batch.py  trend_data.py  trend_params.py
