[metadata]
name = trendvisdata

url = https://github.com/GBERESEARCH/trendvisdata

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: trendvisdata.__version__

description = Data extract and manipulation functions for Trend Visualizer library.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy >= 1.24.1
    requests >= 2.28.1
    pandas >= 1.5.2
    norgatedata >= 1.0.64
    yfinance >= 0.2.40
    technicalmethods >= 0.2.4
    lxml >= 4.9.2

[options.packages.find]
where=src